--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-<h1> Jair</h1>
+	<head>
+		<meta charset="ISO-8859-1">
+		<title>Portfólio Jair</title>
+		<style>
+			body{
+				background-color: red;
+			}
+		
+		</style>
+	</head>
+	<body>
+		<h1>Jair José Duda de Brito</h1>
+		<img alt="" src="imagens/Chrysanthemum.jpg" width=320px>
+		
 
-</body>
+	</body>
 </html>
