--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,12 +7,22 @@
 			body{
 				background-color: red;
 			}
+			
+			
 		
 		</style>
 	</head>
 	<body>
 		<h1>Jair José Duda de Brito</h1>
-		<img alt="" src="imagens/Chrysanthemum.jpg" width=320px>
+		<h2>Sobre mim!</h2>
+		<p>Sou Jair, 32 anos, natural de Santa Luzia PB, Casado, tenho 1 filha
+		 e estou cursando Tec. de Informàtica no IFPB - SANTA LUZIA</p>
+		<div class ="imagem">
+		<img alt="" src="imagens/47423032_2058730650900924_7123658806122250240_n.jpg"style="width:320px; float:right;">
+		</div>
+		
+		
+		
 		
 
 	</body>
