--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,6 +17,17 @@
 		<h2>Sobre mim!</h2>
 		<p>Sou Jair, 32 anos, natural de Santa Luzia PB, Casado, tenho 1 filha
 		 e estou cursando Tec. de Informàtica no IFPB - SANTA LUZIA</p>
+		 
+		 <h2>Nível de Escolaridade</h2>
+		 	<ul>
+		 		<li>Ensino Fundamental - <strong>Arlindo Bento 2006</strong></li>
+		 		<li>Ensino Médio - <strong>Arlindo Bento 2008</strong></li>
+		 		<li>Ensino Técnico- <strong>Pedreiro - Senai 2010</strong></li>
+		 		<li>Ensino Técnico- <strong>Bombeiro Hidráulico - Senai 2010</strong></li>
+		 		<li>Ensino Técnico- <strong>Técnico de Informática - IFPB Cursando</strong></li>
+		 		
+		 		
+		 	</ul>
 		<div class ="imagem">
 		<img alt="" src="imagens/47423032_2058730650900924_7123658806122250240_n.jpg"style="width:320px; float:right;">
 		</div>
