--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,8 @@
 		<title>Portfólio Jair</title>
 		<style>
 			body{
-				background-color: red;
+				background-color: orange;
+				color: white;
 			}
 			
 			
@@ -14,9 +15,12 @@
 	</head>
 	<body>
 		<h1>Jair José Duda de Brito</h1>
+		<img alt="" src="imagens/Chrysanthemum.jpg"style="width:320px; float:right;">
 		<h2>Sobre mim!</h2>
 		<p>Sou Jair, 32 anos, natural de Santa Luzia PB, Casado, tenho 1 filha
 		 e estou cursando Tec. de Informàtica no IFPB - SANTA LUZIA</p>
+		 
+		 
 		 
 		 <h2>Nível de Escolaridade</h2>
 		 	<ul>
@@ -28,9 +32,9 @@
 		 		
 		 		
 		 	</ul>
-		<div class ="imagem">
-		<img alt="" src="imagens/47423032_2058730650900924_7123658806122250240_n.jpg"style="width:320px; float:right;">
-		</div>
+		
+		
+		
 		
 		
 		
