--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,7 @@
 		<title>Portfólio Jair</title>
 		<style>
 			body{
-				background-color: orange;
+				background-color: #4682B4;
 				color: white;
 			}
 			
