--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,6 +8,18 @@
 				background-color: #4682B4;
 				color: white;
 			}
+			.menu h5{
+				width: 200px;
+				heigth: 20px
+				top: 130px
+				float: left;
+			
+			}
+			
+			.img{
+				width: 200px:
+				heigth: 250px:
+			}
 			
 			
 		
@@ -15,14 +27,23 @@
 	</head>
 	<body>
 		<h1>Jair José Duda de Brito</h1>
-		<img alt="" src="imagens/Chrysanthemum.jpg"style="width:320px; float:right;">
-		<h2>Sobre mim!</h2>
+		<div class= "menu">
+			<h5><a href= "#sobre">Sobre mim</a></h5>
+			<h5><a href= "#nivel">Nível de Escolaridade</a></h5>
+			<h5><a href= "#trabalhos">Trabalhos Realizados</a></h5>
+			<h5><a href= "#participacao">Participação em Projetos</a></h5>
+		</div>
+		<div class= "img">
+			<img alt="" src="imagens/Chrysanthemum.jpg"style="width:320px; float:right;">
+		</div>
+		
+		<h2 id="sobre">Sobre mim!</h2>
 		<p>Sou Jair, 32 anos, natural de Santa Luzia PB, Casado, tenho 1 filha
 		 e estou cursando Tec. de Informàtica no IFPB - SANTA LUZIA</p>
 		 
 		 
 		 
-		 <h2>Nível de Escolaridade</h2>
+		 <h2 id="nivel">Nível de Escolaridade</h2>
 		 	<ul>
 		 		<li>Ensino Fundamental - <strong>Arlindo Bento 2006</strong></li>
 		 		<li>Ensino Médio - <strong>Arlindo Bento 2008</strong></li>
