--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,16 +9,26 @@
 				color: white;
 			}
 			.menu h5{
-				width: 200px;
-				heigth: 20px
-				top: 130px
-				float: left;
+				width: 300px;
+				height: 30px;
+				position : relative;
+				float: right;
+				top: 1px;
+				background-color: red;
+				font-size: 20px;
+				color: white;
+				margin:0;
 			
 			}
 			
 			.img{
-				width: 200px:
-				heigth: 250px:
+				width: 200px;
+				height: 250px;
+			}
+			h1{
+				background-color:red;
+				margin:0;
+				
 			}
 			
 			
@@ -34,12 +44,15 @@
 			<h5><a href= "#participacao">Participação em Projetos</a></h5>
 		</div>
 		<div class= "img">
-			<img alt="" src="imagens/Chrysanthemum.jpg"style="width:320px; float:right;">
+			<img alt="" src="imagens/Koala.jpg "style="width:320px; float:left;">
 		</div>
 		
 		<h2 id="sobre">Sobre mim!</h2>
 		<p>Sou Jair, 32 anos, natural de Santa Luzia PB, Casado, tenho 1 filha
 		 e estou cursando Tec. de Informàtica no IFPB - SANTA LUZIA</p>
+		 
+		 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		 
 		 
 		 
 		 
