criando novas paginas

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,10 +4,7 @@
 		<meta charset="ISO-8859-1">
 		<title>Portfólio Jair</title>
 		<style>
-			body{
-				background-color: #4682B4;
-				color: white;
-			}
+			
 			
 			body{
 				background-color: black;
@@ -46,9 +43,11 @@
 			.img{
 				position :absolute;
 				
+				width100%;
 				top: 0px;
 				margin:0;
 				z-index: 0;
+				
 			}
 			#nome{
 				z-index: 6, ;
@@ -68,9 +67,9 @@
 		
 		<div class= "menu">
 			<h5><a href= "sobre.html" target="_self">Sobre mim</a></h5>
-			<h5><a href= "#nivel">Nível de Escolaridade</a></h5>
-			<h5><a href= "#trabalhos">Trabalhos Realizados</a></h5>
-			<h5><a href= "#participacao">Participação em Projetos</a></h5>
+			<h5><a href= "nivelEscolaridade.html">Nível de Escolaridade</a></h5>
+			<h5><a href= "trabalhos.html">Trabalhos Realizados</a></h5>
+			<h5><a href= "Participacao.html">Participação em Projetos</a></h5>
 		</div>
 		<div class= "img">
 			<img alt="" src="imagens/capa_port.jpg "style="width:1348px; height:580px;">
